classes and file concern separation

--- a/Mosh_CS_Beginner/HelloWorld.csproj
+++ b/Mosh_CS_Beginner/HelloWorld.csproj
@@ -43,7 +43,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Operators.cs" />
+    <Compile Include="Math\Calculator.cs" />
+    <Compile Include="Classes.cs" />
+    <Compile Include="Person.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
