--- a/Mosh_CS_Beginner/CS Fundementals.csproj
+++ b/Mosh_CS_Beginner/CS Fundementals.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Strings.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
