File and FileInfo

--- a/Mosh_CS_Beginner/CS Fundementals.csproj
+++ b/Mosh_CS_Beginner/CS Fundementals.csproj
@@ -43,7 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Procedural Programming\ReverseProcedural.cs" />
+    <Compile Include="FileManip.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -54,6 +54,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Math\" />
+    <Folder Include="Procedural Programming\" />
     <Folder Include="Projects\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
