Stack overflow project

--- a/CS Intermediate/CS Intermediate.csproj
+++ b/CS Intermediate/CS Intermediate.csproj
@@ -43,12 +43,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Intermediate Projects\Stopwatch\Program.cs" />
-    <Compile Include="Intermediate Projects\Stopwatch\StopWatch.cs" />
+    <Compile Include="Intermediate Projects\StackOverFlow\Program.cs" />
+    <Compile Include="Intermediate Projects\StackOverFlow\Stack.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Intermediate Projects\Stopwatch\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
