--- a/CS Intermediate/CS Intermediate.csproj
+++ b/CS Intermediate/CS Intermediate.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Intermediate Projects\Stack\Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
